FACULDADE/ISEP/2_ANO/2_SEMESTRE/sem4pi-2024-2025-sem4pi_2024_2025_g13-1/base.integrations.plugins.dsl/src/main/java/eapli/shodrone/integrations/plugins/dsl/proposal/proposalParser.java
// Generated from ./base.integrations.plugins.dsl/src/main/java/eapli/shodrone/integrations/plugins/dsl/proposal/proposal.g4 by ANTLR 4.13.2
package eapli.shodrone.integrations.plugins.dsl.proposal;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class proposalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		POINT=1, TWOPOINTS=2, HIFEN=3, SEPARATOR=4, COMMA=5, BAR=6, DEGREECOORDENATE=7, 
		MINUTECOORDENATE=8, SECONDCOORDENATE=9, REFERENCE=10, HTTPS=11, PROPOSALTITLE=12, 
		VALUE=13, CUMP=14, ANEXO=15, LOCATION=16, DATE=17, TIME=18, DURATION=19, 
		MINUTES=20, LISTDRONESENTENCE=21, LISTFIGURESENTENCE=22, UNITSDRONES=23, 
		EXMOS=24, SIRS=25, VIPMARKER=26, DIGIT=27, COIN=28, LETTER=29, NEWLINE=30, 
		PUNCT=31, WS=32, UNKNOWN=33;
	public static final int
		RULE_start = 0, RULE_version1 = 1, RULE_version2 = 2, RULE_proposalVersion1 = 3, 
		RULE_proposalVersion2 = 4, RULE_title = 5, RULE_intro = 6, RULE_referencePart = 7, 
		RULE_companyNameClient = 8, RULE_proposalBody1 = 9, RULE_proposalBody2 = 10, 
		RULE_valuePart = 11, RULE_paragraph = 12, RULE_amount = 13, RULE_link = 14, 
		RULE_signature = 15, RULE_extra = 16, RULE_list = 17, RULE_attachmentTitle = 18, 
		RULE_info = 19, RULE_proposalNumber = 20, RULE_showLocation = 21, RULE_coordinateConj = 22, 
		RULE_coordinateGeo = 23, RULE_showDate = 24, RULE_showTime = 25, RULE_showDuration = 26, 
		RULE_droneList = 27, RULE_droneItem = 28, RULE_model = 29, RULE_figureList = 30, 
		RULE_figureItem = 31, RULE_greetingVersion = 32, RULE_customerName = 33, 
		RULE_companyName = 34, RULE_streetAddress = 35, RULE_postalCode = 36, 
		RULE_city = 37, RULE_country = 38, RULE_vatNumber = 39, RULE_referenceNumber = 40, 
		RULE_referenceDate = 41, RULE_signatureName = 42, RULE_signatureTitle = 43, 
		RULE_date = 44, RULE_time = 45, RULE_hour = 46, RULE_number = 47, RULE_floatVal = 48, 
		RULE_intVal = 49, RULE_text = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "version1", "version2", "proposalVersion1", "proposalVersion2", 
			"title", "intro", "referencePart", "companyNameClient", "proposalBody1", 
			"proposalBody2", "valuePart", "paragraph", "amount", "link", "signature", 
			"extra", "list", "attachmentTitle", "info", "proposalNumber", "showLocation", 
			"coordinateConj", "coordinateGeo", "showDate", "showTime", "showDuration", 
			"droneList", "droneItem", "model", "figureList", "figureItem", "greetingVersion", 
			"customerName", "companyName", "streetAddress", "postalCode", "city", 
			"country", "vatNumber", "referenceNumber", "referenceDate", "signatureName", 
			"signatureTitle", "date", "time", "hour", "number", "floatVal", "intVal", 
			"text"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "':'", "'\\u2013'", "'-'", "','", "'/'", "'\\u00B0'", "'''", 
			"'\"'", null, "'https://'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "POINT", "TWOPOINTS", "HIFEN", "SEPARATOR", "COMMA", "BAR", "DEGREECOORDENATE", 
			"MINUTECOORDENATE", "SECONDCOORDENATE", "REFERENCE", "HTTPS", "PROPOSALTITLE", 
			"VALUE", "CUMP", "ANEXO", "LOCATION", "DATE", "TIME", "DURATION", "MINUTES", 
			"LISTDRONESENTENCE", "LISTFIGURESENTENCE", "UNITSDRONES", "EXMOS", "SIRS", 
			"VIPMARKER", "DIGIT", "COIN", "LETTER", "NEWLINE", "PUNCT", "WS", "UNKNOWN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "proposal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public proposalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public GreetingVersionContext greetingVersion() {
			return getRuleContext(GreetingVersionContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			greetingVersion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Version1Context extends ParserRuleContext {
		public IntroContext intro() {
			return getRuleContext(IntroContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(proposalParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(proposalParser.NEWLINE, i);
		}
		public ReferencePartContext referencePart() {
			return getRuleContext(ReferencePartContext.class,0);
		}
		public ProposalVersion1Context proposalVersion1() {
			return getRuleContext(ProposalVersion1Context.class,0);
		}
		public ExtraContext extra() {
			return getRuleContext(ExtraContext.class,0);
		}
		public TerminalNode EOF() { return getToken(proposalParser.EOF, 0); }
		public List<TerminalNode> SEPARATOR() { return getTokens(proposalParser.SEPARATOR); }
		public TerminalNode SEPARATOR(int i) {
			return getToken(proposalParser.SEPARATOR, i);
		}
		public Version1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterVersion1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitVersion1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitVersion1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Version1Context version1() throws RecognitionException {
		Version1Context _localctx = new Version1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_version1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			intro();
			setState(105);
			match(NEWLINE);
			setState(106);
			referencePart();
			setState(108); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(107);
				match(NEWLINE);
				}
				}
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(112);
			proposalVersion1();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(113);
				match(NEWLINE);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(119);
				match(SEPARATOR);
				}
				}
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SEPARATOR );
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(124);
				match(NEWLINE);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			extra();
			setState(131);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Version2Context extends ParserRuleContext {
		public CustomerNameContext customerName() {
			return getRuleContext(CustomerNameContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(proposalParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(proposalParser.NEWLINE, i);
		}
		public IntroContext intro() {
			return getRuleContext(IntroContext.class,0);
		}
		public ReferencePartContext referencePart() {
			return getRuleContext(ReferencePartContext.class,0);
		}
		public ProposalVersion2Context proposalVersion2() {
			return getRuleContext(ProposalVersion2Context.class,0);
		}
		public ExtraContext extra() {
			return getRuleContext(ExtraContext.class,0);
		}
		public TerminalNode EOF() { return getToken(proposalParser.EOF, 0); }
		public List<TerminalNode> SEPARATOR() { return getTokens(proposalParser.SEPARATOR); }
		public TerminalNode SEPARATOR(int i) {
			return getToken(proposalParser.SEPARATOR, i);
		}
		public Version2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterVersion2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitVersion2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitVersion2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Version2Context version2() throws RecognitionException {
		Version2Context _localctx = new Version2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_version2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			customerName();
			setState(134);
			match(NEWLINE);
			setState(135);
			intro();
			setState(136);
			match(NEWLINE);
			setState(137);
			referencePart();
			setState(139); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(138);
				match(NEWLINE);
				}
				}
				setState(141); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(143);
			proposalVersion2();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(144);
				match(NEWLINE);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(150);
				match(SEPARATOR);
				}
				}
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SEPARATOR );
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(155);
				match(NEWLINE);
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			extra();
			setState(162);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProposalVersion1Context extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public ProposalBody1Context proposalBody1() {
			return getRuleContext(ProposalBody1Context.class,0);
		}
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(proposalParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(proposalParser.NEWLINE, i);
		}
		public ProposalVersion1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposalVersion1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterProposalVersion1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitProposalVersion1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitProposalVersion1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProposalVersion1Context proposalVersion1() throws RecognitionException {
		ProposalVersion1Context _localctx = new ProposalVersion1Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_proposalVersion1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			title();
			setState(166); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(165);
				match(NEWLINE);
				}
				}
				setState(168); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(170);
			proposalBody1();
			setState(171);
			signature();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProposalVersion2Context extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public ProposalBody2Context proposalBody2() {
			return getRuleContext(ProposalBody2Context.class,0);
		}
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(proposalParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(proposalParser.NEWLINE, i);
		}
		public ProposalVersion2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposalVersion2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterProposalVersion2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitProposalVersion2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitProposalVersion2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProposalVersion2Context proposalVersion2() throws RecognitionException {
		ProposalVersion2Context _localctx = new ProposalVersion2Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_proposalVersion2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			title();
			setState(175); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(174);
				match(NEWLINE);
				}
				}
				setState(177); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(179);
			proposalBody2();
			setState(180);
			signature();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TitleContext extends ParserRuleContext {
		public TerminalNode PROPOSALTITLE() { return getToken(proposalParser.PROPOSALTITLE, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(PROPOSALTITLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntroContext extends ParserRuleContext {
		public CompanyNameContext companyName() {
			return getRuleContext(CompanyNameContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(proposalParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(proposalParser.NEWLINE, i);
		}
		public StreetAddressContext streetAddress() {
			return getRuleContext(StreetAddressContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(proposalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(proposalParser.COMMA, i);
		}
		public List<TerminalNode> WS() { return getTokens(proposalParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(proposalParser.WS, i);
		}
		public PostalCodeContext postalCode() {
			return getRuleContext(PostalCodeContext.class,0);
		}
		public CountryContext country() {
			return getRuleContext(CountryContext.class,0);
		}
		public VatNumberContext vatNumber() {
			return getRuleContext(VatNumberContext.class,0);
		}
		public IntroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterIntro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitIntro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitIntro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntroContext intro() throws RecognitionException {
		IntroContext _localctx = new IntroContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_intro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			companyName();
			setState(185);
			match(NEWLINE);
			setState(186);
			streetAddress();
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(187);
				match(WS);
				}
			}

			setState(190);
			match(COMMA);
			setState(191);
			match(WS);
			setState(192);
			postalCode();
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(193);
				match(WS);
				}
			}

			setState(196);
			match(COMMA);
			setState(197);
			match(WS);
			setState(198);
			country();
			setState(199);
			match(NEWLINE);
			setState(200);
			vatNumber();
			setState(201);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReferencePartContext extends ParserRuleContext {
		public TerminalNode REFERENCE() { return getToken(proposalParser.REFERENCE, 0); }
		public List<TerminalNode> WS() { return getTokens(proposalParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(proposalParser.WS, i);
		}
		public ReferenceNumberContext referenceNumber() {
			return getRuleContext(ReferenceNumberContext.class,0);
		}
		public TerminalNode BAR() { return getToken(proposalParser.BAR, 0); }
		public ReferenceDateContext referenceDate() {
			return getRuleContext(ReferenceDateContext.class,0);
		}
		public ReferencePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referencePart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterReferencePart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitReferencePart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitReferencePart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReferencePartContext referencePart() throws RecognitionException {
		ReferencePartContext _localctx = new ReferencePartContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_referencePart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(REFERENCE);
			setState(204);
			match(WS);
			setState(205);
			referenceNumber();
			setState(206);
			match(WS);
			setState(207);
			match(BAR);
			setState(208);
			match(WS);
			setState(209);
			referenceDate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompanyNameClientContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(proposalParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(proposalParser.LETTER, i);
		}
		public List<TerminalNode> WS() { return getTokens(proposalParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(proposalParser.WS, i);
		}
		public List<TerminalNode> PUNCT() { return getTokens(proposalParser.PUNCT); }
		public TerminalNode PUNCT(int i) {
			return getToken(proposalParser.PUNCT, i);
		}
		public CompanyNameClientContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_companyNameClient; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).enterCompanyNameClient(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proposalListener ) ((proposalListener)listener).exitCompanyNameClient(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proposalVisitor ) return ((proposalVisitor<? extends T>)visitor).visitCompanyNameClient(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompanyNameClientContext companyNameClient() throws RecognitionException {
		CompanyNameClientContext _localctx = new CompanyNameClientContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_companyNameClient);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(212); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(211);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 6979321856L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(214); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
